-
Bug
-
Resolution: Done
-
P1: Critical
-
4.8.0, 4.8.2, 4.8.4
-
None
-
Visual Studio 2008
GCC 4.6.3 on Ubuntu 12.04 with Qt 4.8 (26a4aca)
-
Ia3a02398b0308b2216ad17f8f643745bd013fd50
There is a bug when we throw an exception on slot connected to itemDoubleClicked signal (on a QTreeWidget).
I have reimplemented notify on QApplication to catch exception (like explained on documentation), when we double clic on an item : the exception is catched and printed out.
But if you click again (one time) on another item ==> crash.
I have tested on :
- Qt 4.8.2 with visual 2010 : NO crash
- Qt 4.7 with visual 2008 : NO crash
- Qt 4.8.2 / 4.8 with visual 2008 : CRASH
Of course, the bug happen only on Release and not in Debug mode.
You can try with attached files.
Regards.
- relates to
-
QTBUG-27548 Crash after the application has thrown an exception
-
- Closed
-