Prevent crashes after throwing an exception.

After bc3491c1b85ca36486c9472ecf7ba82f46699e8a, throwing an exception
from a slot will cause the application to crash (segfault). This patch
wraps the offending callFunction call in a try/catch block when
QT_NO_EXCEPTIONS is defined, allowing the appropriate cleanup to occur
and hence preventing the crash.

Task-number: QTBUG-26825
Task-number: QTBUG-27548
Change-Id: Ia3a02398b0308b2216ad17f8f643745bd013fd50
Reviewed-by: Olivier Goffart <ogoffart@woboq.com>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Andy Shaw <andy.shaw@digia.com>